# prism

./: LICENSE.txt  README.md  __init__.py  setup.cfg  setup.py
pkg/: __init__.py  prism.py  utils.py
prism/: __init__.py
scripts/: prism.py
src/prism/: __init__.py  comparison.py  const.py  prism.py  prism_plot.py  utils.py
templates/: sample.par
