[metadata]
name = prism-tltobin
version = 0.0.1
author = Taylor Tobin
description = 1D Maser Polarized Radiative Transfer Code with Faraday Rotation from GTK
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tltobin/prism
project_urls =
    Bug Tracker = https://github.com/tltobin/prism/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = pkg
packages = find:
python_requires = >=3.6

[options.packages.find]
where = pkg